# core-cpp

./: .clang-format  CMakeLists.txt  README.md  README.rst  thrift.sh
ignis/: CMakeLists.txt  IHeaders.h  main.cpp  tmp.cpp
ignis-test/: CMakeLists.txt  main.cpp
ignis-test/executor/: TestFunctions.cpp
ignis-test/executor/core/: IElements.h  IMpiTest.h  IMpiTest.tcc
ignis-test/executor/core/modules/: IGeneralActionModuleTest.h  IGeneralActionModuleTest.tcc  IGeneralModuleTest.h  IGeneralModuleTest.tcc  IKeysModuleTest.cpp  IKeysModuleTest.h  IMapperModuleTest.cpp  IMapperModuleTest.h  IModuleTest.cpp  IModuleTest.h  IModuleTest.tcc  IPostmanModuleTest.cpp  IPostmanModuleTest.h  IShuffleModuleTest.cpp  IShuffleModuleTest.h  ISortModuleTest.cpp  ISortModuleTest.h  IStorageModuleTest.cpp  IStorageModuleTest.h  TestFunctions.cpp
ignis-test/executor/core/storage/: IDiskPartitionTest.h  IMemoryObjectTest.cpp  IMemoryObjectTest.h  IMemoryPartitionTest.h  IObjectTest.cpp  IObjectTest.h  IPartitionTest.h  IPartitionTest.tcc  IRawMemoryObjectTest.h  IRawMemoryPartitionTest.h
ignis/data/: CMakeLists.txt  IFileTransport.cpp  IFileTransport.h  IManager.h  IMemoryBuffer.cpp  IMemoryBuffer.h  IObjectProtocol.cpp  IObjectProtocol.h  IOperators.h  ITuple.h  ITypeInfo.h  IZlibTransport.cpp  IZlibTransport.h  RTTInfo.cpp  RTTInfo.h
ignis/data/handle/: IDeleter.h  IEnumTypes.h  IOperators.h  IOperatorsImpl.h  IPrinter.h  IReader.h  IWriter.h
ignis/data/serialization/: IClassManager.h  IContainer.h  IDeleter.h  IEnumTypes.h  IExtendedType.h  IHandle.h  IHash.h  IPrinter.h  IReader.cpp  IReader.h  IType.h  ITypeHandle.h  IWriter.cpp  IWriter.h
ignis/data/serialization_old/: IContainer.h  IHandle.h  IReader.cpp  IReader.h  ITuple.h  ITupleBase.h  ITypeInfo.h  IWriter.cpp  IWriter.h
ignis/driver/api/: IgnisException.cpp  IgnisException.h
ignis/exception/: IException.cpp  IException.h  IInvalidArgument.h  ILogicError.h
ignis/exceptions/: IException.cpp  IException.h  IInvalidArgument.h  ILogicError.h
ignis/executor/api/: IContext.cpp  IContext.h  IExecute.h  ILoadClass.h  IManager.h  IMapper.h  IOperatorsImpl.h  IReadIterator.h  IReducer.h  IRegister.h  IValue.h  IValueBase.h  IVector.h  IWriteIterator.h  IgnisExecutorException.cpp  IgnisExecutorException.h  Iterable.h
ignis/executor/api/function/: IFlatFunction.h  IFlatFunctionBase.h  IFlatMapFunction.h  IFunction.h  IFunction0.h  IFunction2.h  IFunction2Base.h  IFunctionBase.h  IFunctionImport.h  IPairFlatFunction.h  IPairFlatFunctionBase.h  IPairFunction.h  IPairFunction2.h  IPairFunctionBase.h  IVoidFunction0.h
ignis/executor/core/: DinamicObject.cpp  DinamicObject.h  ICompileManager.cpp  ICompileManager.h  IDinamicObject.cpp  IDinamicObject.h  IExecutorData.cpp  IExecutorData.h  ILibraryLoader.cpp  ILog.cpp  ILog.h  IMessage.h  IMpi.cpp  IMpi.tcc  IObjectLoader.cpp  IObjectLoader.h  IPostBox.cpp  IPostBox.h  IPropertiesParser.cpp  IPropertiesParser.h  IPropertyParser.h  RTTInfo.cpp  RTTInfo.h
ignis/executor/core/exception/: ICompatibilityException.h  IException.h  IInvalidArgument.h  ILogicError.h
ignis/executor/core/io/: IEnumTypes.h  IJsonPrinter.h  IJsonPrinter.tcc  IPrinter.h  IPrinter.tcc  IReader.h  IReader.tcc  IWriter.h  IWriter.tcc
ignis/executor/core/modules/: IDriverModule.cpp  IDriverModule.h  IExecutorServerModule.cpp  IExecutorServerModule.h  IFilesModule.cpp  IFilesModule.h  IGeneralActionModule.cpp  (+25 more)
ignis/rpc/: IExecutorException_constants.cpp  IExecutorException_constants.h  IExecutorException_types.cpp  IExecutorException_types.h  IRemoteException_constants.cpp  IRemoteException_constants.h  IRemoteException_types.cpp  IRemoteException_types.h  ISourceFunction_constants.cpp  ISourceFunction_constants.h  ISourceFunction_types.cpp  ISourceFunction_types.h  ISource_constants.cpp  ISource_constants.h  ISource_types.cpp  ISource_types.h
ignis/rpc/driver/: IBackendService.cpp  IBackendService.h  IBackendService_constants.cpp  IBackendService_constants.h  IBackendService_types.cpp  IBackendService_types.h  IClusterService.cpp  IClusterService.h  IClusterService_constants.cpp  IClusterService_constants.h  IClusterService_types.cpp  IClusterService_types.h  IDataService.cpp  IDataService.h  IDataService_constants.cpp  IDataService_constants.h  IDataService_types.cpp  IDataService_types.h  IJobService.cpp  IJobService.h  IJobService_constants.cpp  IJobService_constants.h  IJobService_types.cpp  IJobService_types.h  IPropertiesService.cpp  IPropertiesService.h  IPropertiesService_constants.cpp  IPropertiesService_constants.h  IPropertiesService_types.cpp  IPropertiesService_types.h
ignis/rpc/executor/: IExecutorServerModule.cpp  IExecutorServerModule.h  IExecutorServerModule_constants.cpp  IExecutorServerModule_constants.h  IExecutorServerModule_types.cpp  IExecutorServerModule_types.h  IFilesModule.cpp  IFilesModule.h  IFilesModule_constants.cpp  IFilesModule_constants.h  IFilesModule_types.cpp  IFilesModule_types.h  IFunction_constants.cpp  IFunction_constants.h  IFunction_types.cpp  IFunction_types.h  IGeneralActionModule.cpp  IGeneralActionModule.h  IGeneralActionModule_constants.cpp  IGeneralActionModule_constants.h  IGeneralActionModule_types.cpp  IGeneralActionModule_types.h  IGeneralModule.cpp  IGeneralModule.h  IGeneralModule_constants.cpp  IGeneralModule_constants.h  IGeneralModule_types.cpp  IGeneralModule_types.h  IIOModule.cpp  IIOModule.h  IIOModule_constants.cpp  IIOModule_constants.h  IIOModule_types.cpp  IIOModule_types.h  IKeysModule.cpp  IKeysModule.h  IKeysModule_constants.cpp  IKeysModule_constants.h  IKeysModule_types.cpp  IKeysModule_types.h  (+44 more)
src/: CMakeLists.txt  main.cpp
src/ignis/data/: IFileTransport.cpp  IFileTransport.h  IObjectProtocol.h
src/ignis/driver/: api.h
src/ignis/rpc/: IExecutorException_constants.cpp  IExecutorException_constants.h  IExecutorException_types.cpp  IExecutorException_types.h  ISource_constants.cpp  ISource_constants.h  ISource_types.cpp  ISource_types.h
test/: CMakeLists.txt  main.cpp  run-tests.sh.in
test/ignis/executor/: TestFunctions.cpp
(+380 files in other folders)
